--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.helloarron.cordova.toast",
   "version": "0.1.0",
-  "description": "Android Toast plugin",
+  "description": "Android Toast Cordova plugin",
   "main": "index.js",
   "scripts": {
     "test": "make test"
