--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "com.helloarron.cordova.toast",
   "version": "0.1.0",
   "description": "Android Toast Cordova plugin",
-  "main": "index.js",
-  "scripts": {
-    "test": "make test"
+  "cordova": {
+    "id": "com.helloarron.cordova.toast",
+    "platforms": [
+      "android"
+    ]
   },
   "repository": {
     "type": "git",
@@ -15,7 +17,7 @@
     "cordova-android"
   ],
   "author": "Arron",
-  "license": "(BSD-2-Clause) MIT",
+  "license": "Apache 2.0",
   "bugs": {
     "url": "https://github.com/ArronYR/cordova-toast/issues"
   }
