--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.helloarron.cordova.toast",
   "version": "0.1.0",
-  "description": "Android Toast Cordova plugin",
+  "description": "A Cordova Toast plugin for Android",
   "cordova": {
     "id": "com.helloarron.cordova.toast",
     "platforms": [
